# m5app

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  data.js  go.mod  go.sum  m5app.go  m5pwd.go
front/: package-lock.json  package.json  vue.config.js
front-st/: package.json  vue.config.js
front-st/src/: App.vue  Layout.vue  Stat.vue  app.scss  main.js  router.js  store.js
front-ui/: .babelrc.bak  package-lock.json  vue.config.js
front-ui/graph/: grapgDonut.js  graphBar.js  graphMeter.js  graphPie.js  graphRadial.js  graphVBar.js  index.js  raf.js  utils.js
front-ui/src/: Home.vue  Sample.vue  SlaChart.vue  main.js  router.js  tools.js
front/src/: About.vue  Chart.vue  ChartLocale.js  Clock.vue  Counter.vue  Layout.vue  Login.vue  Stats.vue  Stock.vue  main.js  plugin.js  router.js
model/hello/: hello.go
model/stats/: statsmodel.go
model/token/: token.go  token_test.go
model/user/: user.go
server/: server.go
server/config/: config.go.in
server/controller/: controller.go
server/controller/hello/: hellocont.go
server/controller/login/: logincont.go
server/controller/stats/: statscont.go
server/controller/tools/: gin.go
server/daemon/: daemon.go
server/jwt/: jwt.go
server/login/: controller.go  middleware.go
server/login/config/: config.go  config.go.in
server/login/tools/: tools.go
server/middleware/: request-log.go  responselog.go  tokenauth.go
tools/: crypto.go  crypto_test.go
work/: Charts.vue  InsSla.vue  SlaChart.vue  Stats.vue  jwx.go
